# pycontw2025-demo

./: .gitignore  Pipfile  README.md  build.py  hatch_build.py  non-obfuscated.py  obfuscated.py  pyproject.toml  setup.py
malicious_package/: __init__.py  cli.py  main.py
