# This is an educational and demonstration example to showcase common malicious code
# techniques used in malware written in Python, aiming for a talk at PyCon Taiwan 2025.
# Talk URL: https://tw.pycon.org/2025/zh-hant/conference/talk/332
# WARNING: The code is not malicious, but please do not run it in a production environment.

[tool.poetry]
name = "malicious-package"
version = "0.0.1"
description = "A seemingly harmless Python package."
authors = [
    "JunWei <junwei.song.info@gmail.com>"
]
license = "MIT"
readme = "README.md"
packages = [{ include = "malicious_package" }]
build = "build.py"

[tool.poetry.dependencies]
python = ">=3.10"

[tool.poetry.scripts]
cli-tool = "malicious_package.cli:run_malicious_command_line_tool"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
